core/bindings/lang/clang/headers/nogamepads_utils.h

typedef enum FfiExitReason {
  ExitReason,
  GameOverReason,
  ServerClosedReason,
  YouAreKickedReason,
  YouAreBannedReason,
  ErrorReason,
} FfiExitReason;
typedef enum FfiJoinFailedMessage {
  ContainIdenticalPlayer,
  PlayerBanned,
  GameLocked,
  UnknownError,
} FfiJoinFailedMessage;
typedef struct FfiPlayer {
  struct FfiAccount account;
  struct FfiCustomize *customize;
} FfiPlayer;
typedef struct FfiControlMessage {
  enum FfiControlMessageTag tag;
  union FfiControlMessageUnion data;
} FfiControlMessage;
typedef struct FfiGameMessage {
  enum FfiGameMessageTag tag;
  union FfiGameMessageUnion data;
} FfiGameMessage;
typedef struct FfiConnectionMessage {
  enum FfiConnectionMessageTag tag;
  union FfiConnectionMessageUnion data;
} FfiConnectionMessage;
typedef struct FfiGameInfo {
  struct KeyValuePair *data;
  uintptr_t len;
  uintptr_t cap;
} FfiGameInfo;
typedef struct FfiConnectionResponseMessage {
  enum FfiConnectionResponseMessageTag tag;
  union FfiConnectionResponseMessageUnion data;
} FfiConnectionResponseMessage;
typedef struct FfiControllerData {
  void *_0;
} FfiControllerData;
typedef struct FfiControllerRuntime {
  void *inner;
  void (*drop_fn)(void*);
} FfiControllerRuntime;
typedef struct FfiGameData {
  void *_0;
} FfiGameData;
typedef struct FfiTcpServerService {
  void *_0;
} FfiTcpServerService;
void free_c_string(char *ptr);
/**
 * Register a player
 */
struct FfiPlayer *player_register(const char *id, const char *password);
/**
 * Register a player from hash
 */
struct FfiPlayer *player_from_hash(const char *hash);
/**
 * Get a hash from player
 */
const char *player_get_hash(struct FfiPlayer *player);
/**
 * Check if the player's password is correct
 */
bool player_check(const struct FfiPlayer *player, const char *password);
/**
 * Set the player's nickname
 */
void player_set_nickname(struct FfiPlayer *player, const char *nickname);
/**
 * Set the player's hue
 */
void player_set_hue(struct FfiPlayer *player, int hue);
/**
 * Set the player's HSV color
 */
void player_set_hsv(struct FfiPlayer *player, int hue, double saturation, double value);
/**
 * Free the player
 */
void free_player(struct FfiPlayer *player);
/**
 * Free ControlMessage
 */
void free_control_message(struct FfiControlMessage *msg);
/**
 * Free GameMessage
 */
void free_game_message(struct FfiGameMessage *msg);
/**
 * Free ExitReason
 */
void free_exit_reason(enum FfiExitReason *msg);
/**
 * Free ConnectionMessage
 */
void free_connection_message(struct FfiConnectionMessage *msg);
/**
 * Free ConnectionResponseMessage
 */
void free_connection_response_message(struct FfiConnectionResponseMessage *msg);
/**
 * Free JoinFailedMessage
 */
void free_join_failed_message(enum FfiJoinFailedMessage *msg);
void free_game_info(struct FfiGameInfo map);
/**
 * Create controller data
 */
struct FfiControllerData *controller_data_new(void);
/**
 * Bind player to controller
 */
void controller_data_bind_player(struct FfiControllerData *controller,
                                 struct FfiPlayer *ffi_player);
/**
 * Build runtime
 */
struct FfiControllerRuntime *controller_data_build_runtime(struct FfiControllerData *controller);
/**
 * Free ControllerData memory
 */
void free_controller_data(struct FfiControllerData *controller);
/**
 * Close runtime and exit game
 */
void controller_runtime_close(struct FfiControllerRuntime *runtime);
/**
 * Send control message
 */
void controller_runtime_send_message(struct FfiControllerRuntime *runtime,
                                     struct FfiControlMessage *control_message);
/**
 * Send text message
 */
void controller_runtime_send_text_message(struct FfiControllerRuntime *runtime,
                                          const char *message_ptr);
/**
 * Press a button
 */
void controller_runtime_press_a_button(struct FfiControllerRuntime *runtime, uint8_t key);
/**
 * Release a button
 */
void controller_runtime_release_a_button(struct FfiControllerRuntime *runtime, uint8_t key);
/**
 * Change axis value
 */
void controller_runtime_change_axis(struct FfiControllerRuntime *runtime, uint8_t key, double axis);
/**
 * Change direction value
 */
void controller_runtime_change_direction(struct FfiControllerRuntime *runtime,
                                         uint8_t key,
                                         double x,
                                         double y);
/**
 * Pop a message from the queue
 */
struct FfiGameMessage *controller_runtime_pop(struct FfiControllerRuntime *runtime);
/**
 * Free runtime memory
 */
void free_controller_runtime(struct FfiControllerRuntime *runtime);
/**
 * Create game data
 */
struct FfiGameData *game_data_new(void);
/**
 * Add info
 */
struct FfiGameData *game_data_add_info(struct FfiGameData *data,
                                       const char *key,
                                       const char *value);