core/bindings/lang/csharp/NoGamepads_CharpBindings/NoGamepads_Core/Generated/NoGamepads.Native.cs


        internal static FfiTcpServerService __GetOrCreateInstance(__IntPtr native, bool saveInstance = false, bool skipVTables = false)
        {
            if (native == __IntPtr.Zero)
                return null;
            if (__TryGetNativeToManagedMapping(native, out var managed))
                return (FfiTcpServerService)managed;
            var result = __CreateInstance(native, skipVTables);
            if (saveInstance)
                __RecordNativeToManagedMapping(native, result);
            return result;
        }

        internal static FfiTcpServerService __CreateInstance(__Internal native, bool skipVTables = false)
        {
            return new FfiTcpServerService(native, skipVTables);
        }

        private static void* __CopyValue(__Internal native)
        {
            var ret = Marshal.AllocHGlobal(sizeof(__Internal));
            *(__Internal*) ret = native;
            return ret.ToPointer();
        }

        private FfiTcpServerService(__Internal native, bool skipVTables = false)
            : this(__CopyValue(native), skipVTables)
        {
            __ownsNativeInstance = true;
            __RecordNativeToManagedMapping(__Instance, this);
        }

        protected FfiTcpServerService(void* native, bool skipVTables = false)
        {
            if (native == null)
                return;
            __Instance = new __IntPtr(native);
        }

        public FfiTcpServerService()
        {
            __Instance = Marshal.AllocHGlobal(sizeof(global::NoGamepads_Sharp.FfiTcpServerService.__Internal));
            __ownsNativeInstance = true;
            __RecordNativeToManagedMapping(__Instance, this);
        }

        public FfiTcpServerService(global::NoGamepads_Sharp.FfiTcpServerService _0)
        {
            __Instance = Marshal.AllocHGlobal(sizeof(global::NoGamepads_Sharp.FfiTcpServerService.__Internal));
            __ownsNativeInstance = true;
            __RecordNativeToManagedMapping(__Instance, this);
            *((global::NoGamepads_Sharp.FfiTcpServerService.__Internal*) __Instance) = *((global::NoGamepads_Sharp.FfiTcpServerService.__Internal*) _0.__Instance);
        }

        public void Dispose()
        {
            Dispose(disposing: true, callNativeDtor : __ownsNativeInstance );
        }

        partial void DisposePartial(bool disposing);

        internal protected virtual void Dispose(bool disposing, bool callNativeDtor )
        {
            if (__Instance == IntPtr.Zero)
                return;
            NativeToManagedMap.TryRemove(__Instance, out _);
            DisposePartial(disposing);
            if (__ownsNativeInstance)
                Marshal.FreeHGlobal(__Instance);
            __Instance = IntPtr.Zero;
        }

        public __IntPtr _0
        {
            get
            {
                return ((__Internal*)__Instance)->_0;
            }

            set
            {
                ((__Internal*)__Instance)->_0 = (__IntPtr) value;
            }
        }
    }

    public unsafe partial class nogamepads_data
    {
        public partial struct __Internal
        {
            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_c_string", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeCString(sbyte* ptr);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "player_register", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr PlayerRegister([MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string id, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string password);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "player_from_hash", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr PlayerFromHash([MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string hash);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "player_get_hash", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr PlayerGetHash(__IntPtr player);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "player_check", CallingConvention = __CallingConvention.Cdecl)]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlayerCheck(__IntPtr player, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string password);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "player_set_nickname", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void PlayerSetNickname(__IntPtr player, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string nickname);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "player_set_hue", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void PlayerSetHue(__IntPtr player, int hue);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "player_set_hsv", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void PlayerSetHsv(__IntPtr player, int hue, double saturation, double value);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_player", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreePlayer(__IntPtr player);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_control_message", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeControlMessage(__IntPtr msg);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_game_message", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeGameMessage(__IntPtr msg);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_exit_reason", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeExitReason(global::NoGamepads_Sharp.FfiExitReason* msg);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_connection_message", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeConnectionMessage(__IntPtr msg);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_connection_response_message", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeConnectionResponseMessage(__IntPtr msg);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_join_failed_message", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeJoinFailedMessage(global::NoGamepads_Sharp.FfiJoinFailedMessage* msg);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_game_info", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeGameInfo(__IntPtr map);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "controller_data_new", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr ControllerDataNew();

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "controller_data_bind_player", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void ControllerDataBindPlayer(__IntPtr controller, __IntPtr ffi_player);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "controller_data_build_runtime", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr ControllerDataBuildRuntime(__IntPtr controller);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_controller_data", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeControllerData(__IntPtr controller);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "controller_runtime_close", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void ControllerRuntimeClose(__IntPtr runtime);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "controller_runtime_send_message", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void ControllerRuntimeSendMessage(__IntPtr runtime, __IntPtr control_message);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "controller_runtime_send_text_message", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void ControllerRuntimeSendTextMessage(__IntPtr runtime, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string message_ptr);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "controller_runtime_press_a_button", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void ControllerRuntimePressAButton(__IntPtr runtime, byte key);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "controller_runtime_release_a_button", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void ControllerRuntimeReleaseAButton(__IntPtr runtime, byte key);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "controller_runtime_change_axis", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void ControllerRuntimeChangeAxis(__IntPtr runtime, byte key, double axis);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "controller_runtime_change_direction", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void ControllerRuntimeChangeDirection(__IntPtr runtime, byte key, double x, double y);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "controller_runtime_pop", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr ControllerRuntimePop(__IntPtr runtime);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_controller_runtime", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeControllerRuntime(__IntPtr runtime);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_data_new", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr GameDataNew();

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_data_add_info", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr GameDataAddInfo(__IntPtr data, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string key, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string value);
